--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
     margin: 10px;
 }
 
+.box-day{
+    display: inline-block;
+    border: 1px solid lightgray;
+    width: 100px;
+    height: auto;
+    background-color: white;
+    padding: 5px;
+    text-align: center;
+}
 .box {
     display: inline-flex;
     border: 1px solid lightgray;
@@ -32,6 +41,11 @@
     background-color: white;
     color: lightgray;
     padding: 5px;
+}
+
+.box:hover, .box2:hover, .box3:hover{
+    cursor: pointer;
+    border: 1px solid blue;
 }
 
 .box-4{
@@ -72,6 +86,11 @@
     background-color: white;
     color: lightgray;
     text-align: center;
+}
+
+.small_box:hover, .small_box-2:hover, .small_box-3:hover{
+    cursor: pointer;
+    border: 1px solid blue;
 }
 
 .small_box-no-outline{
@@ -118,6 +137,11 @@
     max-height: fit-content;
     background-color: lightgreen;
     padding: 5px;
+}
+
+.long_box-2:hover, .long_box:hover{
+    cursor: pointer;
+    border: 1px solid blue;
 }
 
 .long_box-3{
