--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
     padding: 5px;
 }
 
-.box:hover, .box2:hover, .box3:hover{
+.box:hover, .box2:hover{
     cursor: pointer;
     border: 1px solid blue;
 }
