--- a/style.css
+++ b/style.css
@@ -144,6 +144,10 @@
     padding: 5px;
 }
 
+.current_day{
+    background-color: lightgreen;
+}
+
 .long_box-2:hover, .long_box:hover{
     cursor: pointer;
     border: 1px solid blue;
@@ -159,3 +163,15 @@
     padding: 5px;
 }
 
+.dot{
+    height: 25px;
+    width: 25px;
+    background-color: cornflowerblue;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+}
+
+.text_div{
+    display: block;
+}
