--- a/calendar/style.css
+++ b/calendar/style.css
@@ -1,3 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+
+body{
+    margin: 0;
+}
 .date_navigation{
     margin-bottom: 50px;
 }
@@ -24,15 +31,6 @@
     padding: 5px;
 }
 
-.box2 {
-    display: inline-flex;
-    border: 1px solid lightgray;
-    width: 100px;
-    height: 100px;
-    background-color: lightgreen;
-    padding: 5px;
-}
-
 .box3 {
     display: inline-flex;
     border: 1px solid lightgray;
@@ -43,7 +41,7 @@
     padding: 5px;
 }
 
-.box:hover, .box2:hover{
+.box:hover{
     cursor: pointer;
     border: 1px solid blue;
 }
@@ -134,21 +132,12 @@
     text-align: center;
 }
 
-.long_box-2{
-    display: inline-flex;
-    border: 1px solid lightgray;
-    width: 150px;
-    height: 200px;
-    max-height: fit-content;
-    background-color: lightgreen;
-    padding: 5px;
-}
 
 .current_day{
     background-color: lightgreen;
 }
 
-.long_box-2:hover, .long_box:hover{
+.long_box:hover{
     cursor: pointer;
     border: 1px solid blue;
 }
@@ -174,4 +163,45 @@
 
 .text_div{
     display: block;
+}
+
+.add_sched_modal{
+    display: none;
+    position: absolute;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(128, 128, 128, 0.493);
+    z-index: 1;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.modal_content{
+    padding: 10px 0px 0px 20px;
+    margin: 10px auto auto auto;
+    overflow: auto;
+    background-color: white;
+    width: 95%;
+    height: fit-content;
+    border-radius: 10px;
+}
+
+#close_modal{
+    cursor: pointer;
+    float: right;
+    color: red;
+    margin-right: 20px;
 }
