--- a/integrated_calendar/views/calendar.html
+++ b/integrated_calendar/views/calendar.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="../static/script/utils.js" async></script>
-    <script src="../static/script/script.js" async></script>
+    <script src="../static/script/utils.js" defer></script>
+    <script src="../static/script/script.js" defer></script>
     <link rel="stylesheet" href="../static/styles/style.css" />
     <title>Trestle - Calendar</title>
 </head>
