finished task checklist

--- a/integrated_calendar/views/calendar.html
+++ b/integrated_calendar/views/calendar.html
@@ -20,7 +20,7 @@
     <span class=dot></span>
     <div id='date'></div>
 
-    <button>Task</button>
+    <a href="task_checklist.html"><button>Task</button></a>
     <a href="calendar.html"><button>Calendar</button></a>
     <a href="announcements.html"><button>Announcements</button></a>
     <a href="../index.php"><button>Connect</button></a>
