--- a/integrated_calendar/views/task_checklist.html
+++ b/integrated_calendar/views/task_checklist.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/styles/announcements.css">
-    <script src="../static/script/announcements.js" async></script>
-    <title>Announcements</title>
+    <link rel="stylesheet" href="../static/styles/tasks.css">
+    <script src="../static/script/courseworks.js" async></script>
+    <title>Task Checklist</title>
 </head>
 
 <body>
-    <h1>Announcements</h1>
+    <h1>Task Checklist</h1>
 
     <a href="task_checklist.html"><button>Task</button></a>
     <a href="calendar.html"><button>Calendar</button></a>
@@ -20,7 +20,7 @@
     <br>
     <br>
 
-    <div id="notification_section">
+    <div id="tasks_section">
     </div>
 </body>
 
