--- a/integrated_calendar/static/styles/style.css
+++ b/integrated_calendar/static/styles/style.css
@@ -198,7 +198,39 @@ body {
     text-align: center;
 }
 
-.dot-user {
+.dot-task-unfinished {
+    height: 25px;
+    width: 25px;
+    border: 1px solid red;
+    /* background: rgb(110, 11, 128);
+    background: linear-gradient(
+        112deg,
+        rgba(110, 11, 128, 1) 0%,
+        rgba(229, 19, 121, 1) 100%
+    ); */
+    content: url(../icons/user_ico.png);
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+}
+
+.dot-task-finished {
+    height: 25px;
+    width: 25px;
+    border: 1px solid lightgreen;
+    /* background: rgb(110, 11, 128);
+    background: linear-gradient(
+        112deg,
+        rgba(110, 11, 128, 1) 0%,
+        rgba(229, 19, 121, 1) 100%
+    ); */
+    content: url(../icons/user_ico.png);
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+}
+
+.dot-reminder {
     height: 25px;
     width: 25px;
     border: 1px solid lightblue;
@@ -208,7 +240,7 @@ body {
         rgba(110, 11, 128, 1) 0%,
         rgba(229, 19, 121, 1) 100%
     ); */
-    content: url(../icons/user_ico.png);
+    content: url(../icons/bell_ico.png);
     border-radius: 50%;
     display: inline-block;
     text-align: center;
