dirty integration done

--- a/integrated_calendar/views/calendar.html
+++ b/integrated_calendar/views/calendar.html
@@ -23,7 +23,7 @@
     <a href="task_checklist.html"><button>Task</button></a>
     <a href="calendar.html"><button>Calendar</button></a>
     <a href="announcements.html"><button>Announcements</button></a>
-    <a href="../index.php"><button>Connect</button></a>
+    <a href="../../api/tests.php" target="_blank"><button>Connect</button></a>
     <br>
     <br>
 
