--- a/integrated_calendar/views/add_task.html
+++ b/integrated_calendar/views/add_task.html
@@ -14,33 +14,44 @@
     </div>
     <div class="row">
         <div class="column">
-            <p><strong>Tasks</strong></p>
+            <h3>Create Task</h3>
             <task_preview></task_preview>
         </div>
 
         <div class="column">
             <p id="clicked_date"></p>
             <!-- Post Reminders -->
-            <div class="post-reminders-div" style="border: 1px solid black; padding: 15px; padding-top: 5px;">
+            <div class="modal-container">
+                <div class="modal-image">
+                    <img src="images/user_ico.png" alt="">
+                </div>
+            <div class="post-reminders-div">
                 <form id="post-reminder-form">
 
-                    Reminder type:
-                    <input type="text" name="option-task" id="option-task" value="Task" disabled>
+                    <label class="edit-label">Type:
+                    <input class="value" size="10" type="text" name="option-task" id="option-task" value="Task" disabled>
                     <input type="hidden" id="post-reminder-type-option" value="TASK" name="type">
+                    </label>
 
-                    Title:
-                    <input type="text" name="title">
+                    <label class="edit-label">Title:
+                    <input class="value" size="10" type="text" name="title">
+                    </label>
 
-                    Remind Date:
-                    <input type="date" name="remind-date">
+                    <label class="edit-label">Date:
+                    <input  class="value" size="10" type="date" name="remind-date">
+                    </label>
                     </br>
 
-                    Message (Nullable):
-                    <textarea name="message"></textarea>
+                    <label class="edit-label">Description:
+                    <textarea class="edit-desc" cols="18" name="message" placeholder="(Not Required)"></textarea>
+                    </label>
 
                 </form>
-                <button id="post-reminder-button">Post Reminder</button> = <textarea id="post-reminder-response"
-                    disabled placeholder="Response"></textarea></br></br>
+                <div class="modal-btn-container">
+                <button id="post-reminder-button">Create Task</button><textarea id="post-reminder-response"
+                    disabled></textarea></br></br>
+                </div>
+            </div>
             </div>
             </br>
         </div>
