--- a/integrated_calendar/views/announcements.html
+++ b/integrated_calendar/views/announcements.html
@@ -35,7 +35,7 @@
                 <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="far fa-calendar"></i>Calendar</a></li>
                 <li><a href="#"><i class="fas fa-tasks"></i>Task Checklist</a></li>
-                <li><a href="#"><i class="fas fa-bullhorn"></i>Announcements</a></li>
+                <li class="li-active"><a class="a-active" href="#"><i class="fas fa-bullhorn"></i>Announcements</a></li>
                 <li><a href="#"><i class="fas fa-cog"></i>Settings</a></li>
                 <li><a href="#"><i class="far fa-question-circle"></i>Help</a></li>
                 <li><a href="#"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
