--- a/integrated_calendar/views/announcements.html
+++ b/integrated_calendar/views/announcements.html
@@ -44,15 +44,17 @@
         <!--Start of Announcements-->
         <div class="body-container">
             <h1 class="heading">Announcements</h1>
-            <div class="button_container">
-                <a href="task_checklist.html"><button>Task</button></a>
-                <a href="calendar.html"><button>Calendar</button></a>
-                <a href="announcements.html"><button>Announcements</button></a>
-                <a href="../../api/tests.php"><button>Connect</button></a>
+            <div class="announcement-container">
+                <div class="button_container">
+                    <a href="task_checklist.html"><button>Task</button></a>
+                    <a href="calendar.html"><button>Calendar</button></a>
+                    <a href="announcements.html"><button>Announcements</button></a>
+                    <a href="../../api/tests.php"><button>Connect</button></a>
+                    </div>
+                <br>
+                <br>
+                <div id="notification_section">
                 </div>
-            <br>
-            <br>
-            <div id="notification_section">
             </div>
         </div>
         <!--End of Announcements-->
