--- a/settings.css
+++ b/settings.css
@@ -78,7 +78,7 @@ font-weight: 500;
 #navigation{
 opacity: 0;
 }
-.heading, .modal_content h3{
+.heading{
 text-align: center;
 background: var(--gradient2);
 color:transparent;
@@ -89,9 +89,6 @@ text-transform: uppercase;
 padding:1rem;
 text-shadow: 3px 3px 5px rgba(0, 0, 0, .4);
 pointer-events: none;
-}
-.modal_content h3{
-margin-left: 3rem;
 }
 header{
 position: fixed;
@@ -143,32 +140,26 @@ margin-top:5rem;
 h1{
 text-align: center;
 }
-.task-container{
+.settings-container{
 text-align: center;
 justify-content: center;
-}
-.task-container .btn{
-margin: 1rem;
-}
-.task {
 background: #fff;
 background-size: cover;
 box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 display: flex;
-flex-direction: row;
-justify-content: flex-start;
+flex-direction: column;
+justify-content: center;
 font-size:2rem;
-margin: 2rem 40rem;
+margin: 2rem 10rem;
 border-radius: .5rem;
-padding: .8rem;
+padding: .8rem 20rem;
 }
-.contents {
-display: block;
-text-align: left;
+.settings-container .btn{
 margin: 1rem;
 }
-button, .edit_task, .link {background-image: linear-gradient(to right, #2d016c,#170048)}
-button, .edit_task, .link{
+.copybtn{background-image: linear-gradient(to right, #2d016c,#170048)}
+.copybtn{
+font-size: 1.5rem;
 margin: 1rem;
 padding: 1rem 3rem;
 text-align: center;
@@ -180,8 +171,7 @@ border-radius: 10px;
 box-shadow: 0 .5rem 1rem rgba(0,0,0,.7);
 border: none;
 }
-
-button:hover, .edit_task:hover, .link:hover{
+.copybtn:hover, .edit_task:hover, .link:hover{
 background-position: right center; /* change the direction of the change here */
 color: #fff;
 text-decoration: none;
@@ -193,8 +183,9 @@ margin-top: 4%;
 height: 5rem;
 width: 10rem;
 }
-.delete_task {background-image: linear-gradient(to right, #D31027 0%, #EA384D  51%, #D31027  100%)}
-.delete_task{
+.revoke {background-image: linear-gradient(to right, #D31027 0%, #EA384D  51%, #D31027  100%)}
+.revoke{
+font-size: 1.5rem;
 margin-top: 4%;
 margin-left: 1rem;
 padding: 1rem 2rem;
@@ -209,17 +200,16 @@ border: none;
 height: 5rem;
 width: 10rem;
 }
-.delete_task:hover {
+.revoke:hover {
 background-position: right center; /* change the direction of the change here */
 color: #fff;
 text-decoration: none;
 transform: scale(1.1);
 cursor: pointer;
 }
-.mark_as_done, 
-#edit-reminder-button, 
-#post-reminder-button {background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC  51%, #02AAB0  100%)}
-.mark_as_done {
+.set-token,.grant{background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC  51%, #02AAB0  100%)}
+.set-token,.grant{
+font-size: 1.5rem;
 margin-top: 4%;
 margin-left: 1rem;
 padding: 1rem 2rem;
@@ -234,7 +224,7 @@ border: none;
 height: 5rem;
 width: 15rem;
 }
-.mark_as_done:hover {
+.set-token:hover,.grant:hover {
 background-position: right center; /* change the direction of the change here */
 color: #fff;
 text-decoration: none;
@@ -249,115 +239,91 @@ align-content: center;
 flex-direction: row;
 top: 0;left: 0;
 }
-.source_image {
-width: 10%;
-margin: 1rem 0;
-padding: 2rem;
+#gear{
+  font-size:15rem;
+  color:#170048;
+  text-align: center;
+  justify-content: center;
+  padding: 2rem;
+  transition: all 1s ease-in-out;
 }
-.title{
-margin-right: 5px;
+#gear:hover{
+  transform: rotate(360deg);
 }
-.add_sched_modal {
+.tokens{
+display:flex;
+flex-direction:column;
 justify-content: center;
-display: none;
-margin: auto;
-width: 100%;
-height: 100%;
-background-color: rgba(128, 128, 128, 0.493);
-z-index: 1;
-position:fixed;
+text-align: center;
+align-content: center;
 }
-.modal-image img{
-width:25rem;
-margin-top: 10%;
-margin-left: 10%;
+.current{
+display:flex;
+flex-direction:column;
+justify-content: center;
+text-align: center;
+align-content: center;
 }
-.modal_content{
-top: 50%;
-left: 0;
+.current .col1 .labels{
+  font-size:1.8rem;
+  font-weight: 600;
+  padding: 1rem;
+}
+.current .col2 .code{
+font-size:1.4rem;
+padding: 1rem 10rem;
+}
+.tokens .col1{
+display:flex;
+flex-direction:row;
+justify-content: center;
+text-align: center;
+align-content: center;
+}
+.tokens .col1 .labels, .tokens .col2 .labels{
+font-size:1.8rem;
+font-weight: 600;
 padding: 3rem;
-margin:30vh auto;
-overflow: auto;
-background-color: white;
-width: fit-content;
-height: fit-content;
-border-radius: 10px;
-box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 }
-#close_modal, #cancel_edit{
-cursor: pointer;
-float: right;
-color: red;
-font-size:2rem;
-font-weight: bold;
-margin-right: 20px;
-transition: all 0.7s ease-in-out;
+.tokens .col2{
+display:flex;
+flex-direction:row;
+justify-content: center;
+text-align: center;
+align-content: center;
 }
-#close_modal:hover, #cancel_edit:hover{
-transform: rotate(360deg);
+.tokens .col1 .code, .tokens .col2 .code{
+font-size:1.5rem;
+padding: 3rem;
 }
-.modal-container{
-display: flex;
+.tokens .col1 .icon,.tokens .col2 .icon{
+padding: 1.5rem;
+}
+.form{
+display:flex;
 flex-direction: row;
 justify-content: center;
 text-align: center;
-border: 1px solid #666;
-border-radius: 10px;
+align-content: center;
 }
-.edit-reminders-div, .post-reminders-div{
+.form .field{
 padding: 3rem;
 }
-#edit-reminder-form{
+.form .field #setfield{
+width: 30rem;
+height: 4rem;
+border-radius:1rem;
+}
+.form .setbtn{
+padding: 1.5rem;
+}
+.toggle{
 display:flex;
-flex-direction: column;
-text-align: left;
-padding: auto 20rem;
-}
-.edit-label{
-display: flex;
-flex-direction: row;
-font-size:2rem;
-font-weight: 700;
-text-transform: uppercase;
-margin-bottom: 3%;
-}
-#clicked_date{
-text-align:center;
-font-size: 2rem;
-font-weight: 500;
-text-transform: uppercase;
-pointer-events: none;
-}
-#option-task{
-background: white;
-border:none;
-}
-.value{
-border-left: none;
-border-right: none;
-border-top: none;
-margin-left: 1%;
-margin-bottom:1%;
-font-size: 2rem;
-}
-.edit-id{
-display: none;
-}
-.modal-btn-container{
-text-align: left;
-justify-content: center
-}
-#edit-reminder-response, #post-reminder-response{
-display:none;
-}
-.edit-desc{
-resize: none;
-outline: none;
-border-radius: 3px;
-border:1px solid #666;
-transform: translateY(-8px);
-margin-left: 3%;
-margin-top: 1%;
+flex-direction:column;
+padding:1rem;
+justify-content: center;
+align-content: center;
+align-items: center;
 }
 /*media queries*/
 @media (max-width:1440px){
@@ -371,9 +337,6 @@ margin: 2rem 35rem;
 @media (max-width:1200px){
 html{
 font-size: 45%;
-}
-.task{
-margin: 2rem 5rem;
 }
 .body-container{
 margin-left: 21%;
