--- a/integrated_calendar/views/announcements.html
+++ b/integrated_calendar/views/announcements.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="../static/styles/announcements.css">
     <script src="https://kit.fontawesome.com/5357b59286.js" crossorigin="anonymous"></script>
     <script src="../static/script/announcements.js" async></script>
@@ -18,13 +21,13 @@
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar" class="fas fa-bars"></label>
         <nav class="navbar">
-        <a href="#home">Home</a>
-        <a href="#calendar">Calendar</a>
-        <a href="#taskchecklist">Task Checklist</a>
-        <a href="#announcements">Announcements</a>
-        <a href="#settings">Settings</a>
-        <a href="#help">Help</a>
-        <a href="#logout">Logout</a>
+            <a href="../../landing.html">Home</a>
+            <a href="calendar.html">Calendar</a>
+            <a href="#taskchecklist">Task Checklist</a>
+            <a href="announcements.html">Announcements</a>
+            <a href="#settings">Settings</a>
+            <a href="#help">Help</a>
+            <a href="#" onclick="logout();">Logout</a>
         </nav>
     </header>
     <!--End of header-->
@@ -32,14 +35,18 @@
         <div class="sidebar">
             <h2>Trestle</h2>
             <ul>
-                <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="far fa-calendar"></i>Calendar</a></li>
-                <li><a href="#"><i class="fas fa-tasks"></i>Task Checklist</a></li>
+                <li><a href="../../landing.html"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="calendar.html"><i class="far fa-calendar"></i>Calendar</a></li>
+                <li><a href="task_checklist.html"><i class="fas fa-tasks"></i>Task Checklist</a></li>
                 <li class="li-active"><a class="a-active" href="#"><i class="fas fa-bullhorn"></i>Announcements</a></li>
                 <li><a href="#"><i class="fas fa-cog"></i>Settings</a></li>
                 <li><a href="#"><i class="far fa-question-circle"></i>Help</a></li>
-                <li><a href="#"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
+                <li><a href="#" onclick="logout();"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
             </ul>
+        </div>
+        <!-- Modal for viewing complete information -->
+        <div id="show_modal">
+            <div id="modal_content"></div>
         </div>
         <!--Start of Announcements-->
         <div class="body-container">
@@ -50,7 +57,7 @@
                     <a href="calendar.html"><button>Calendar</button></a>
                     <a href="announcements.html"><button>Announcements</button></a>
                     <a href="../../api/tests.php"><button>Connect</button></a>
-                    </div>
+                </div>
                 <br>
                 <br>
                 <div id="notification_section">
@@ -59,6 +66,7 @@
         </div>
         <!--End of Announcements-->
     </div>
+
 </body>
 
 </html>
